📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -5326,5 +5326,45 @@
         "published": "Wed, 10 Dec 2025 09:00:00 +0000",
         "source": "AI News",
         "summary": "<p>Many companies are still working out how to use AI in a steady and practical way, but a small group is already pulling ahead. New research from NTT DATA outlines a playbook that shows how these \u201cAI leaders\u201d set themselves apart through strong plans, firm decisions, and a disciplined approach to building and using AI [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/inside-the-playbook-of-companies-winning-with-ai/\">Inside the playbook of companies winning wit"
+    },
+    {
+        "id": "https://www.engadget.com/home/smart-home/best-mesh-wifi-system-130028701.html?src=rss",
+        "title": "The best mesh Wi-Fi systems of 2025",
+        "link": "https://www.engadget.com/home/smart-home/best-mesh-wifi-system-130028701.html?src=rss",
+        "published": "Wed, 10 Dec 2025 10:01:26 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Spotty Wi-Fi can make even simple tasks feel harder than they should. If you\u2019ve ever had a video call freeze in one room or watched a stream buffer in another, a mesh Wi-Fi system can fix those frustrations. Instead of relying on a single router tucked in a corner, a mesh setup uses multiple units that work together to spread a strong, consistent signal throughout your home.<br /><br />Modern mesh systems are built for busy households. They keep dozens of devices connected at once, manage tra"
+    },
+    {
+        "id": "https://gizmodo.com/ai-scam-phone-numbers-2000697589",
+        "title": "How Scammers Poison AI Results With Fake Customer Support Numbers",
+        "link": "https://gizmodo.com/ai-scam-phone-numbers-2000697589",
+        "published": "Wed, 10 Dec 2025 10:00:00 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Rear View Of Woman Call Center With Head Set Working In Team Office\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/call-center-shutterstock.jpg\" width=\"1920\" /><br /><br />\"Our investigation shows that threat actors are already exploiting this frontier at scale.\""
+    },
+    {
+        "id": "https://readwrite.com/turkish-court-issues-arrest-warrants-29-soccer-betting-players/",
+        "title": "Turkish court issues arrest warrants for 29 individuals, including top-tier players",
+        "link": "https://readwrite.com/turkish-court-issues-arrest-warrants-29-soccer-betting-players/",
+        "published": "Wed, 10 Dec 2025 10:00:29 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"A Turkish soccer stadium with the TFF logo on the pitch. Turkish soccer is in disarray following the suspension of 1,024 active players due to the recent betting scandal. Turkish court issues arrest warrants for 29 individuals, including top-tier players\" class=\"attachment-medium size-medium wp-post-image\" height=\"219\" src=\"https://readwrite.com/wp-content/uploads/2025/11/Turkish-football-is-in-disarray-following-the-suspension-of-1024-active-players-due-to-the-recent-betting-scan"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-get-iphone-17-from-t-mobile-free/",
+        "title": "T-Mobile will give you a free iPhone 17, no trade-in required - here's how to get one",
+        "link": "https://www.zdnet.com/article/how-to-get-iphone-17-from-t-mobile-free/",
+        "published": "Wed, 10 Dec 2025 09:30:40 GMT",
+        "source": "Latest news",
+        "summary": "Bring your number over to T-Mobile and get an iPhone 17 on them. We break down the details."
+    },
+    {
+        "id": "https://www.zdnet.com/article/instacart-chatgpt-integration-hands-on/",
+        "title": "I tried using Instacart in ChatGPT, and ordered cookie ingredients for delivery - in minutes",
+        "link": "https://www.zdnet.com/article/instacart-chatgpt-integration-hands-on/",
+        "published": "Wed, 10 Dec 2025 09:20:53 GMT",
+        "source": "Latest news",
+        "summary": "It's fast and easy, and it all happens inside ChatGPT, with no Instacart+ required."
     }
 ]
