📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -5366,5 +5366,117 @@
         "published": "Wed, 10 Dec 2025 09:20:53 GMT",
         "source": "Latest news",
         "summary": "It's fast and easy, and it all happens inside ChatGPT, with no Instacart+ required."
+    },
+    {
+        "id": "https://www.wired.com/story/scientists-thought-parkinsons-was-in-our-genes-it-might-be-in-the-water/",
+        "title": "Scientists Thought Parkinson\u2019s Was in Our Genes. It Might Be in the Water",
+        "link": "https://www.wired.com/story/scientists-thought-parkinsons-was-in-our-genes-it-might-be-in-the-water/",
+        "published": "Wed, 10 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Parkinson\u2019s disease has environmental toxic factors, not just genetic."
+    },
+    {
+        "id": "https://gizmodo.com/just-in-time-for-christmas-nic-cages-jesus-horror-movie-comes-home-2000697616",
+        "title": "Just in Time for Christmas, Nic Cage\u2019s Jesus Horror Movie Comes Home",
+        "link": "https://gizmodo.com/just-in-time-for-christmas-nic-cages-jesus-horror-movie-comes-home-2000697616",
+        "published": "Wed, 10 Dec 2025 11:00:19 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Niccagecarpentersson\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/NicCageCarpentersSon.jpg\" width=\"1920\" /><br /><br />Hail 'Suhtan,' you can now watch 'The Carpenter's Son' from your own hill of skulls."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-sams-club-1-year-membership-with-auto-renew",
+        "title": "50% off a Sam\u2019s Club membership is a smart pre-holiday purchase",
+        "link": "https://mashable.com/article/dec-10-sams-club-1-year-membership-with-auto-renew",
+        "published": "Wed, 10 Dec 2025 10:54:40 +0000",
+        "source": "Mashable",
+        "summary": "Get a one-year Sam\u2019s Club membership with auto-renew for just $25, 50% off for a limited pre-holiday deal."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-microsoft-visio-2021-professional-lifetime-license-for-windows",
+        "title": "Microsoft Visio Pro is just $12.97 for the holidays",
+        "link": "https://mashable.com/article/dec-10-microsoft-visio-2021-professional-lifetime-license-for-windows",
+        "published": "Wed, 10 Dec 2025 10:53:30 +0000",
+        "source": "Mashable",
+        "summary": "Get a Microsoft Visio 2021 Professional Lifetime License for Windows for just $12.97 \u2014 a powerful diagramming tool for turning complex data into clear visuals."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-mini-crossword-answers-hints-december-10-2025",
+        "title": "NYT Mini crossword answers, hints for December 10, 2025",
+        "link": "https://mashable.com/article/nyt-mini-crossword-answers-hints-december-10-2025",
+        "published": "Wed, 10 Dec 2025 10:49:48 +0000",
+        "source": "Mashable",
+        "summary": "Answers to each clue for the December 10, 2025 edition of NYT's The Mini crossword puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-pokemon-tcg-mega-kangaskhan-ex-box-deal",
+        "title": "Pok\u00e9mon TCGs Mega Kangaskhan ex Box is near market value on Amazon vs. TCGplayer",
+        "link": "https://mashable.com/article/dec-10-pokemon-tcg-mega-kangaskhan-ex-box-deal",
+        "published": "Wed, 10 Dec 2025 10:47:51 +0000",
+        "source": "Mashable",
+        "summary": "Find the best Pok\u00e9mon TCG on Amazon. As of Dec. 10, Pok\u00e9mon TCG's Mega Kangaskhan ex Box Amazon vs. TCGplayer"
+    },
+    {
+        "id": "https://mashable.com/video/seth-meyers-amber-ruffin-trump-late-night",
+        "title": "Amber Ruffin sticks up for Seth Meyers after Trump comments",
+        "link": "https://mashable.com/video/seth-meyers-amber-ruffin-trump-late-night",
+        "published": "Wed, 10 Dec 2025 10:44:50 +0000",
+        "source": "Mashable",
+        "summary": "\"Late Night with Seth Meyers\" regular Amber Ruffin defended her colleague against Donald Trump's comments."
+    },
+    {
+        "id": "https://readwrite.com/walberg-sports-unions-illegal-gambling-scandals/",
+        "title": "Committee Chair Walberg presses sports unions for answers on illegal gambling scandals",
+        "link": "https://readwrite.com/walberg-sports-unions-illegal-gambling-scandals/",
+        "published": "Wed, 10 Dec 2025 11:10:27 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Committee Chair Walberg presses sports unions for answers on illegal gambling scandals. A graphic showing several official letters from the U.S. House Committee on Education and the Workforce, arranged in a fanned layout against a blue patterned background with orange accents. The letters appear addressed to multiple sports players associations regarding concerns over illegal sports gambling.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite."
+    },
+    {
+        "id": "https://readwrite.com/fanduel-casino-launches-love-island-slot-game/",
+        "title": "FanDuel Casino launches Love Island slot game in select US states",
+        "link": "https://readwrite.com/fanduel-casino-launches-love-island-slot-game/",
+        "published": "Wed, 10 Dec 2025 10:45:35 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Promotional graphic for FanDuel Casino\u2019s Love Island Reel Vibes slot game, featuring a woman in a colorful dress beside a smartphone displaying the vibrant pink game interface, with logos, hearts, flamingos, and a \u201cPower Combo\u201d banner. FanDuel Casino launches Love Island slot game in select US states\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/FanDuel-Casino-Love-Island-300x200.jpeg\" style=\"width: 100%; he"
+    },
+    {
+        "id": "https://readwrite.com/illegal-whatsapp-bookmaker-sentenced-gambling/",
+        "title": "Illegal WhatsApp bookmaker sentenced after Gambling Commission uncovers misconduct",
+        "link": "https://readwrite.com/illegal-whatsapp-bookmaker-sentenced-gambling/",
+        "published": "Wed, 10 Dec 2025 10:24:45 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Illegal WhatsApp bookmaker sentenced after Gambling Commission uncovers unpaid balance and misconduct. Haydon Simcock pictured in a shirt and yellow tie\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Illegal-WhatsApp-bookmaker-sentenced-after-Gambling-Commission-uncovers-unpaid-balance-and-misconduct-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>The UK&#8217;s "
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-gps-trackers-and-devices-for-kids/",
+        "title": "The best GPS trackers for kids in 2025 (recommended by parents)",
+        "link": "https://www.zdnet.com/article/best-gps-trackers-and-devices-for-kids/",
+        "published": "Wed, 10 Dec 2025 11:00:57 GMT",
+        "source": "Latest news",
+        "summary": "These GPS trackers can help you manage your child's whereabouts with real-time location updates and innovative safety features"
+    },
+    {
+        "id": "https://eamonnsullivan.co.uk/posts-output/email-setup/2025-12-3-putting-email-in-its-place/",
+        "title": "Putting email in its place with Emacs and Mu4e",
+        "link": "https://eamonnsullivan.co.uk/posts-output/email-setup/2025-12-3-putting-email-in-its-place/",
+        "published": "Wed, 03 Dec 2025 21:42:48 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46140579\">Comments</a>"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/10/1128475/securing-vmware-workloads-in-regulated-industries/",
+        "title": "Securing VMware workloads in regulated industries",
+        "link": "https://www.technologyreview.com/2025/12/10/1128475/securing-vmware-workloads-in-regulated-industries/",
+        "published": "Wed, 10 Dec 2025 10:11:19 +0000",
+        "source": "MIT Technology Review",
+        "summary": "At a regional hospital, a cardiac patient\u2019s lab results sit behind layers of encryption, accessible to his surgeon but shielded from those without strictly need-to-know status. Across the street at a credit union, a small business owner anxiously awaits the all-clear for a wire transfer, unaware that fraud detection systems have flagged it for further&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/10/1129079/how-one-controversial-startup-hopes-to-cool-the-planet/",
+        "title": "How one controversial startup hopes to cool the planet",
+        "link": "https://www.technologyreview.com/2025/12/10/1129079/how-one-controversial-startup-hopes-to-cool-the-planet/",
+        "published": "Wed, 10 Dec 2025 10:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Stardust Solutions believes that it can solve climate change\u2014for a price. The Israel-based geoengineering startup has said it expects&#160; nations will soon pay it more than a billion dollars a year to launch specially equipped aircraft into the stratosphere. Once they\u2019ve reached the necessary altitude, those planes will disperse particles engineered to reflect away enough&#8230;"
     }
 ]
