📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -5478,5 +5478,101 @@
         "published": "Wed, 10 Dec 2025 10:00:00 +0000",
         "source": "MIT Technology Review",
         "summary": "Stardust Solutions believes that it can solve climate change\u2014for a price. The Israel-based geoengineering startup has said it expects&#160; nations will soon pay it more than a billion dollars a year to launch specially equipped aircraft into the stratosphere. Once they\u2019ve reached the necessary altitude, those planes will disperse particles engineered to reflect away enough&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/google-invests-in-fervos-462m-round-to-unlock-even-more-geothermal-energy/",
+        "title": "Google invests in Fervo\u2019s $462M round to unlock even more geothermal energy",
+        "link": "https://techcrunch.com/2025/12/10/google-invests-in-fervos-462m-round-to-unlock-even-more-geothermal-energy/",
+        "published": "Wed, 10 Dec 2025 12:05:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Fervo Energy's Series E round will help the company build additional phases of its Cape Station power plant while beginning development on new sites."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/meeshos-606m-ipo-pops-as-enthusiasm-for-indias-e-commerce-startups-rises/",
+        "title": "Meesho\u2019s $606M IPO pops as enthusiasm for India\u2019s e-commerce startups rises",
+        "link": "https://techcrunch.com/2025/12/10/meeshos-606m-ipo-pops-as-enthusiasm-for-indias-e-commerce-startups-rises/",
+        "published": "Wed, 10 Dec 2025 12:03:08 +0000",
+        "source": "TechCrunch",
+        "summary": "Meesho had a good first day as a public company, with its shares climbing as much as 46% from its issue price as investors jumped to grab a piece of the company built around small merchants and value-conscious consumers."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/fertility-startup-inito-wants-to-use-ai-designed-antibodies-to-expand-at-home-health-tests/",
+        "title": "Fertility startup Inito wants to use AI-designed antibodies to expand at-home health tests",
+        "link": "https://techcrunch.com/2025/12/10/fertility-startup-inito-wants-to-use-ai-designed-antibodies-to-expand-at-home-health-tests/",
+        "published": "Wed, 10 Dec 2025 12:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Inito has raised $29 million in new funding to invest in and develop AI-engineered antibodies that will help it offer new types of tests and improve the accuracy of existing ones."
+    },
+    {
+        "id": "https://www.wired.com/review/naya-create-keyboard/",
+        "title": "Naya Create Review: A Split Keyboard That Just Doesn\u2019t Work",
+        "link": "https://www.wired.com/review/naya-create-keyboard/",
+        "published": "Wed, 10 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "A beautifully designed split keyboard that seems utterly determined not to work."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-gifts-for-men-2025/",
+        "title": "17 Best Gifts for Men, Manly Men, and Menly Man Men (2025)",
+        "link": "https://www.wired.com/gallery/best-gifts-for-men-2025/",
+        "published": "Wed, 10 Dec 2025 11:32:00 +0000",
+        "source": "WIRED",
+        "summary": "When you need something that's as mannishly masculinized as you can get for the Man\u2122 in your life, we have you covered."
+    },
+    {
+        "id": "https://www.wired.com/story/it-was-nuts-the-extreme-tests-that-show-why-hail-is-a-multi-billion-dollar-problem/",
+        "title": "\u2018It Was Nuts\u2019: The Extreme Tests that Show Why Hail Is a Multibillion-Dollar Problem",
+        "link": "https://www.wired.com/story/it-was-nuts-the-extreme-tests-that-show-why-hail-is-a-multi-billion-dollar-problem/",
+        "published": "Wed, 10 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "The costs of a hail damage have ballooned over the past two decades, prompting researchers to resort to extreme measures to understand how these storms destroy buildings."
+    },
+    {
+        "id": "https://gizmodo.com/the-directors-of-elio-and-kpop-demon-hunters-talk-about-the-reality-of-selling-diverse-movies-2000697468",
+        "title": "The Directors of \u2018Elio\u2019 and \u2018KPop Demon Hunters\u2019 Talk About the Reality of Selling Diverse Movies",
+        "link": "https://gizmodo.com/the-directors-of-elio-and-kpop-demon-hunters-talk-about-the-reality-of-selling-diverse-movies-2000697468",
+        "published": "Wed, 10 Dec 2025 12:05:45 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Kpop Demon Hunters Netflix Hi\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/kpop-demon-hunters-netflix-HI-.jpg\" width=\"1920\" /><br /><br />Domee Shi and Maggie Kang look back on the inverse reactions to 'Elio' and 'KPop Demon Hunters' and their shared desires to center original stories."
+    },
+    {
+        "id": "https://gizmodo.com/nuclear-fusion-took-big-leaps-in-2025-heres-what-mattered-most-2000696767",
+        "title": "Nuclear Fusion Took Big Leaps in 2025. Here\u2019s What Mattered Most",
+        "link": "https://gizmodo.com/nuclear-fusion-took-big-leaps-in-2025-heres-what-mattered-most-2000696767",
+        "published": "Wed, 10 Dec 2025 12:00:10 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Preamplifier National Ignition Facility Eoy Fusion\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/preamplifier-national-ignition-facility-eoy-fusion.jpg\" width=\"1920\" /><br /><br />Here\u2019s to another year of waiting for fusion to come ten years later."
+    },
+    {
+        "id": "https://mashable.com/video/daily-show-ronny-chieng-airports-sean-duffy-rfk-jr",
+        "title": "The Daily Show slams the White Houses plan to improve airports with workout spaces",
+        "link": "https://mashable.com/video/daily-show-ronny-chieng-airports-sean-duffy-rfk-jr",
+        "published": "Wed, 10 Dec 2025 11:44:24 +0000",
+        "source": "Mashable",
+        "summary": "\"The Daily Show\" host Ronny Chieng unpicked transportation secretary Sean Duffy's $1 billion airport plan."
+    },
+    {
+        "id": "https://mashable.com/video/david-letterman-jimmy-kimmel-trump-feud",
+        "title": "David Letterman sticks up for Jimmy Kimmel over his ongoing Trump feud",
+        "link": "https://mashable.com/video/david-letterman-jimmy-kimmel-trump-feud",
+        "published": "Wed, 10 Dec 2025 11:18:00 +0000",
+        "source": "Mashable",
+        "summary": "David Letterman appeared on \"Jimmy Kimmel Live!\" and stuck up for the host over his ongoing feud with President Trump."
+    },
+    {
+        "id": "https://readwrite.com/washington-bans-prediction-markets/",
+        "title": "Washington bans prediction markets as \u2018increased interest\u2019 in event-based contracts spikes",
+        "link": "https://readwrite.com/washington-bans-prediction-markets/",
+        "published": "Wed, 10 Dec 2025 12:08:24 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Olympia, Washington. Washington bans prediction markets as &#039;increased interest&#039; in event-based contracts spikes\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Olympia-Washington-300x200.jpeg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Washington State has banned prediction markets as interest in the platforms ramps up across the United States. The Washington St"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/perplexity-ai-agents-taking-over-complex-enterprise-tasks/",
+        "title": "Perplexity: AI agents are taking over complex enterprise tasks",
+        "link": "https://www.artificialintelligence-news.com/news/perplexity-ai-agents-taking-over-complex-enterprise-tasks/",
+        "published": "Wed, 10 Dec 2025 12:08:30 +0000",
+        "source": "AI News",
+        "summary": "<p>New adoption data from Perplexity reveals how AI agents are driving workflow efficiency gains by taking over complex enterprise tasks. For the past year, the technology sector has operated under the assumption that the next evolution of generative AI would advance beyond conversation into action. While Large Language Models (LLMs) serve as a reasoning engine, [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/perplexity-ai-agents-taking-over-complex-enterprise"
     }
 ]
